fixing resizes on safari

--- a/css/style.less
+++ b/css/style.less
@@ -41,10 +41,9 @@ h1 img {
 }
 
 .lightbox img {
-    width: auto;
     max-width: 90%;
     max-height: 90%;
-    display: block;
+    object-fit: contain;
     margin: auto auto;
 }
 
